<resources>
    <string name="app_name">Particle Remote</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout">Logout</string>
    <string name="action_settings">action_settings</string>
    <string name="title_function_dialog_list">"Select Function"</string>
    <string name="title_activity_relay_scrolling">RelayScrollingActivity</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string-array name="DigitalPins">
        <item>D0</item>
        <item>D1</item>
        <item>D2</item>
        <item>D3</item>
        <item>D4</item>
        <item>D5</item>
        <item>D6</item>
        <item>D7</item>
    </string-array>
    <string-array name="AnalogPins">
        <item>A0</item>
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A5</item>
    </string-array>
    <string name="DHT_default_input">D6</string>
    <string-array name="temperature_selection_titles">
        <item>13 °C</item>
        <item>14 °C</item>
        <item>15 °C</item>
        <item>16 °C</item>
        <item>17 °C</item>
        <item>18 °C</item>
        <item>19 °C</item>
        <item>20 °C</item>
        <item>21 °C</item>
        <item>22 °C</item>
        <item>23 °C</item>
        <item>24 °C</item>
        <item>25 °C</item>
        <item>26 °C</item>
        <item>27 °C</item>
    </string-array>
    <string-array name="temperature_selection_values">
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
    </string-array>
    <string name="comfort_temperature_default">22</string>
    <string name="night_temperature_default">18</string>
    <string name="LOWEST_TEMPERATURE_SELECTION_VALUE">13</string>
    <string name="HIGHEST_TEMPERATURE_SELECTION_VALUE">27</string>
    <string name="MIDDLE_TEMPERATURE_SELECTION_VALUE">20 °C</string>
    <string name="HONEYWELL_OFF_VALUE">75</string>
    <string-array name="credits_items">
        <item></item>
    </string-array>
    <string name="title_activity_temp_honeywell_settings">Settings</string>
    <string name="title_activity_user_settings">Settings</string>
    <string name="pref_comfort_key">pref_comfort_temperature</string>
    <string name="pref_night_key">pref_night_temperature</string>
    <string name="setting_temperature_toast_text">Setting temperature...</string>
    <string name="wrong_response">Wrong response!</string>
    <string name="read_buffer_overflow">Read Buffer Overflow!</string>
    <string name="time_out">TimeOut!</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="set_temperature">Set Temperature</string>
    <string name="comfort">Comfort</string>
    <string name="night_mode">Night Mode</string>
    <string name="set_comfort_temp_title">Set comfort temperature</string>
    <string name="set_comfort_temp_summary">Set the temperature of the comfort button</string>
    <string name="set_night_temp_title">Set night temperature</string>
    <string name="set_night_temp_summary">Set the temperature of the night mode button</string>
    <string name="set_comfort_temp_dialogTitle">Choose a comfort temperature</string>
    <string name="set_night_temp_dialogTitle">Choose a night temperature</string>
    <string name="honeywell_temp_pref_category_title">Honeywell Temperature Settings</string>
    <string name="relay_pref_category_title">Relay Settings</string>
    <string name="saved_particle_device_shared_pref_key">Saved Particle Devices:</string>
    <string-array name="particle_function_dialog_items">
        <item>Switch Relays</item>
        <item><![CDATA[Read temperature & humidity]]></item>
        <item>Set Honeywell temperature</item>
        <item>Send messages with MQTT protocol </item>
    </string-array>
    <string name="wrong_command">Wrong command</string>
    <string name="relay_out_of_limit">Relay out of limit</string>
    <string name="wait_a_sec">Wait a sec!</string>
    <string name="saved_relay_shared_pref_key">Saved Relays for Particle Device:</string>
    <string name="relay_toggle_confirmation_title">Do you want to toggle this Relay?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_relay_popup_title">Add new Relay</string>
    <string name="yup">Yup</string>
    <string name="nope">Nope</string>
    <string name="second_short">sec</string>
    <string name="minute_short">min</string>
    <string name="hour_short">h</string>
    <string name="undo">UNDO</string>
    <string name="delete_relay_snackbar_text">Relay has been deleted</string>
    <string name="relay_name">Relay Name</string>
    <string name="select_output_pin">Select Output Pin:</string>
    <string name="toggle_back_after">Toggle back after:</string>
    <string name="zero_number">0</string>
    <string name="confirmation_before_toggling_relay">Confirmation before toggling relay</string>
    <string name="temperature_loading">Temperature: loading...</string>
    <string name="humidity_loading">Humidity: loading...</string>
    <string name="email">Email</string>
    <string name="about_version">Version: </string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pref_toggle_relay_low_output_key">pref_toggle_relay_low_output</string>
    <string name="temp_humi_pref_category_title">Read Temperature and Humidity Settings</string>
    <string name="pref_DHT_input_pin_key">pref_DHT_input_pin</string>
    <string name="pref_refresh_cycle_chart_key">pref_refresh_cycle_chart</string>
    <string name="refresh_cycle_chart_default_value">5</string>
    <string name="set_dht22_input_pin_title">Set input pin for DHT22</string>
    <string name="set_dht22_input_pin_summary">Must be changed also in Particle Code! Default: D6</string>
    <string name="set_dht22_input_pin_dialogTitle">Set input pin</string>
    <string name="set_chart_refresh_cycle_title">Set value update cycle</string>
    <string name="set_chart_refresh_cycle_summary">Set the seconds till a new value will be loaded</string>
    <string name="set_chart_refresh_cycle_dialogTitle">Set value update cycle [s]</string>
    <string name="toggle_relay_low_output_summaryOff">Relay is switched when output level is 3 Volt</string>
    <string name="toggle_relay_low_output_summaryOn">Relay is switched when output level is GND</string>
    <string name="toggle_relay_low_output_title">Switched on LOW Output</string>
    <string name="pin_used_by_DHT22_error_message">Pin is used by temperature sensor (DHT22)</string>
    <string name="title_activity_credits">Credits</string>
    <string name="report_bug">Report bug</string>
    <string name="source_code_on_github">Source Code on GitHub</string>
</resources>