<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/honeywell_temp_pref_category_title"
        android:key="pref_key_temp_honeywell">


        <ListPreference
            android:key="@string/pref_comfort_key"
            android:title="@string/set_comfort_temp_title"
            android:summary="@string/set_comfort_temp_summary"
            android:dialogTitle="@string/set_comfort_temp_dialogTitle"
            android:entries="@array/temperature_selection_titles"
            android:entryValues="@array/temperature_selection_values"
            android:defaultValue="@string/comfort_temperature_default" />

        <ListPreference
            android:key="@string/pref_night_key"
            android:title="@string/set_night_temp_title"
            android:summary="@string/set_night_temp_summary"
            android:dialogTitle="@string/set_night_temp_dialogTitle"
            android:entries="@array/temperature_selection_titles"
            android:entryValues="@array/temperature_selection_values"
            android:defaultValue="@string/night_temperature_default"
            android:dependency="pref_comfort_temperature"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/temp_humi_pref_category_title">

        <ListPreference
            android:key="@string/pref_DHT_input_pin_key"
            android:title="@string/set_dht22_input_pin_title"
            android:summary="@string/set_dht22_input_pin_summary"
            android:dialogTitle="@string/set_dht22_input_pin_dialogTitle"
            android:entries="@array/DigitalPins"
            android:entryValues="@array/DigitalPins"
            android:defaultValue="@string/DHT_default_input" />

        <EditTextPreference
            android:key="@string/pref_refresh_cycle_chart_key"
            android:title="@string/set_chart_refresh_cycle_title"
            android:summary="@string/set_chart_refresh_cycle_summary"
            android:dialogTitle="@string/set_chart_refresh_cycle_dialogTitle"
            android:defaultValue="@string/refresh_cycle_chart_default_value"
            android:inputType="number"
            android:maxLength="4"
            android:dependency="@string/pref_DHT_input_pin_key"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/relay_pref_category_title">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_toggle_relay_low_output_key"
            android:summaryOff="@string/toggle_relay_low_output_summaryOff"
            android:summaryOn="@string/toggle_relay_low_output_summaryOn"
            android:title="@string/toggle_relay_low_output_title" />

    </PreferenceCategory>


</PreferenceScreen>