<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_about_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_card_about_2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="Development:"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_card_about_2_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_card_about_2_1"
            android:background="@color/gray_light" />

        <LinearLayout
            android:id="@+id/ll_issue_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_card_about_2_line"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@drawable/ic_bug_grey600_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/report_bug"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_github_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_issue_about"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@drawable/ic_github_circle_grey600_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/source_code_on_github"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_credits_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_github_about"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@drawable/ic_code_tags_grey600_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/title_activity_credits"
                android:textStyle="italic" />
        </LinearLayout>



    </RelativeLayout>
</android.support.v7.widget.CardView>